--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "cross-env": "^5.2.0",
+    "express": "^4.16.3",
     "nuxt": "^2.0.0",
-    "express": "^4.16.3"
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
