--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "cross-env": "^5.2.0",
