--- a/content/delivery.yml
+++ b/content/delivery.yml
@@ -10,7 +10,7 @@ deliveryOverview:
     ## Delivery
 
 
-    Delivery now available with $50 minimum order plus a $10 delivery charge. Orders must be made before 12 (noon) for same day delivery. All delivery orders placed after 12 (noon) will be scheduled for next day delivery. We offer FREE delivery on orders of $150 or more.
+    Delivery now available with $50 minimum order plus a $10 delivery charge. Orders must be made before 12 (noon) for same day delivery. All delivery orders placed after 12 (noon) will be scheduled for next day delivery. We offer FREE delivery for orders of $150 or more.
   image: /assets/uploads/bag2.png
 numberedOVerview:
   title01: Shop
