--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,65 +12,6 @@ collections:
         file: "content/home.yml"
         fields:
           - {label: Title, name: title, widget: string}
-          - {label: Body, name: body, widget: string}
+          - {label: Body, name: body, widget: markdown}
           - {label: Main Hero Title, name: main_hero_title, widget: string}
           - {label: Main Hero Subtitle, name: main_hero_subtitle, widget: string }
-      - label: "Delivery/Curbside Page"
-        name: "deliveryCurbside"
-        file: "content/delivery.yml"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - label: Main Hero
-            name: mainHero
-            widget: object
-            fields:
-              - {label: Title, name: title, widget: string }
-              - {label: Curbside Caption, name: subtitle, widget: string }
-              - {label: In-Store Shopping Caption, name: caption, widget: string }
-          - label: Delivery Overview 
-            name: deliveryOverview
-            widget: object
-            fields:
-              - {label: Title, name: title, widget: string }
-              - {label: Subtitle, name: subtitle, widget: string }
-              - {label: Content, name: content, widget: markdown }
-              - {label: "Image", name: "image",  widget: "image", default: "/build/assets/bag2.png"}
-          - label: Numbered Overview
-            name: numberedOVerview
-            widget: object
-            fields:
-              - {label: Title (01), name: title01, widget: string }
-              - {label: Content (01), name: content01, widget: markdown }
-              - {label: Title (02), name: title02, widget: string }
-              - {label: Content (02), name: content02, widget: markdown }
-              - {label: Title (03), name: title03, widget: string }
-              - {label: Content (03), name: content03, widget: markdown }
-              - {label: Title (04), name: title04, widget: string }
-              - {label: Content (04), name: content04, widget: markdown }
-          - label: Curbside Overview 
-            name: curbsideOverview
-            widget: object
-            fields:
-              - {label: Title, name: title, widget: string }
-              - {label: Subtitle, name: subtitle, widget: string }
-              - {label: Hours, name: hours, widget: string }
-              - {label: Content, name: contentCurbside, widget: markdown }
-              - {label: "Image", name: "curbsideImage",  widget: "image", default: "/build/assets/store.jpg"}
-          - label: Service 
-            name: serviceBlurb
-            widget: object
-            fields:
-              - {label: Title, name: title, widget: string }
-              - {label: Content, name: contentServiceBlurb, widget: markdown }
-      - label: "Contact Page"
-        name: "contact"
-        file: "content/contact.yml"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - label: Contact Info
-            name: contactInfo
-            widget: object
-            fields:
-              - {label: Hours, name: hours, widget: string }
-              - {label: Phone, name: phone, widget: string }
-              - {label: Address, name: address, widget: string }
