--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,10 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 # This line should *not* be indented
-media_folder: "assets/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "static/uploads" # Media files will be stored in the repo under images/uploads
+public_folder: "/uploads"
+editor:
+  preview: false
 collections:
   - label: "Pages"
     name: "pages"
