--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,7 @@ backend:
 # This line should *not* be indented
 media_folder: "static/uploads" # Media files will be stored in the repo under images/uploads
 public_folder: "/uploads"
+show_preview_links: false
 logo_url: https://topnotchthc.netlify.app/img/logo.svg
 editor:
   preview: false
